eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplebank-api-service
spec:
  selector:
    app: simplebank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
