eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ingress-nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-simplebank-test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: "api.meomeocoj.tech"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simplebank-api-service
            port:
              number: 80
  tls:
  - hosts: 
    - api.meomeocoj.tech
    secretName: simplebank-api-cert
